Updated to drop duplicated functionalities
Signed-off-by: Osamu Aoki <osamu@debian.org>

--- a/1_improved-workspace-indicator.conf
+++ b/1_improved-workspace-indicator.conf
@@ -1,3 +1,4 @@
 URL="https://github.com/MichaelAquilina/improved-workspace-indicator.git"
 UUID='$(cat metadata.json | jq -r .uuid)'
-SCRIPT="glib-compile-schemas schemas;ln -sf ${DIR_GITREPO}/${NAME} ${DIR_EXTENSIONS}/${UUID}"
+#SCRIPT="glib-compile-schemas schemas;ln -sf ${DIR_GITREPO}/${NAME} ${DIR_EXTENSIONS}/${UUID}"
+SCRIPT="ln -sf ${DIR_GITREPO}/${NAME} ${DIR_EXTENSIONS}/${UUID}"
