--- a/4_suppress-startup-animation.conf
+++ b/4_suppress-startup-animation.conf
@@ -1,3 +1,4 @@
+# Dash to dock has switch
 URL="https://github.com/icedman/suppress-startup-animation.git"
 UUID="suppress-startup-animation@icedman.github.com"
 SCRIPT="ln -sf ${DIR_GITREPO}/${NAME} ${DIR_EXTENSIONS}/${UUID}"
